[package]
name = "smp-dx"
version = "0.0.1"
authors = ["65787978"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
reqwest = { version = "0.12.4", features = ["json", "blocking", "gzip", "deflate"] }
serde_json = "1.0.117"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
futures = "0.3.30"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["time"] }
gloo = { version = "0.11.0", features = ["futures"] }
manganis = "0.2.2"
